# internal/handler/handler.go
@@ -9,6 +9,7 @@ import (
 	"server/internal/config"
 	"server/internal/log"
 	"server/internal/service"
+	"server/pkg"
 )
 
 type Handler struct {
@@ -37,16 +38,19 @@ func (h *Handler) Router() *fiber.App {
 	}))
 	f.Use(log.RequestLogger(h.logger))
 	f.Get("/swagger/*", swagger.HandlerDefault)
+
 	f.Post("/signup", h.SignUp)
 	f.Post("/login", h.Login)
 	f.Get("/users", h.GetAllUsers)
 	f.Post("/company/create", h.CreateCompany)
 	f.Get("/company/:id/members", h.GetCompanyMembers)
 
-	//authGroup := f.Group("/auth")
-	//authGroup.Use(func(c *fiber.Ctx) {
-	//	_ = pkg.WithJWTAuth(c, h.conf.Application.SigningKey)
-	//})
+	f.Post("/cosmogram", h.GetCosmogram)
+	authGroup := f.Group("/auth")
+	authGroup.Use(func(c *fiber.Ctx) error {
+		return pkg.WithJWTAuth(c, h.conf.Application.SigningKey)
+	})
+	// authGroup.Post("/cosmogram", h.GetCosmogram)
 
 	return f
 }
